# ogit

./: .ocamlformat  README.md  dune-project  ogit.opam
lib/: dune  pack.ml
src/: dune  encoding.ml  error.ml  pack.ml  pack.mli
test/: dune  pack.ml  test.ml
test/fixtures/: pack-08631b7e544a9618098922174a04f29e70d72ae4.idx  pack-08631b7e544a9618098922174a04f29e70d72ae4.pack
